syntax = "proto3";

package race;

import "race/message.proto";

message ListRacesRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;
}

message ListRacesResponse {
  // The field name should match the noun "Race" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Race races = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetRaceRequest {
  string id = 1;
  string name = 2;
}

message GetRaceResponse {
  Race race = 1;
}

message CreateRaceRequest {
  string name = 1;
  string date = 2;
}

message CreateRaceResponse {
  Race race  = 1;
}

message UpdateRaceRequest {
  // The Race resource which replaces the resource on the server.
  string id = 1;
  string name = 2;
  string date = 3;
}

message UpdateRaceResponse {
  Race race  = 1;
}

message DeleteRaceRequest {
  // The resource name of the Race to be deleted.
  string id = 1;
}

message DeleteRaceResponse {
  Race race  = 1;
}

message SubscribeRaceParticipationRequest {
  string id = 1;
  string user_id = 2;
  string car_id = 3;
}

message SubscribeRaceParticipationResponse {
  Race race  = 1;
}

message UnSubscribeRaceParticipationRequest {
  string id = 1;
  string user_id = 2;
}

message UnSubscribeRaceParticipationResponse {
  Race race  = 1;
}
